--- a/src/pages/main/components/QuarterCube.module.css
+++ b/src/pages/main/components/QuarterCube.module.css
@@ -2,13 +2,13 @@
     margin: 2px 5px 2px 2px;
     height: 11px;
     width: 5px;
-    background-color: #8f8f8f;
+    /*background-color: #8f8f8f;*/
     border-radius: 2px;
     cursor: pointer;
 }
 
 .cube:hover {
     transform: scale(1.3);
-    background-color: #397e94;
+    background-color: #397e94 !important;
     transition: all 0.3s ease;
 }
