--- a/src/pages/main/components/YearSection.module.css
+++ b/src/pages/main/components/YearSection.module.css
@@ -56,11 +56,11 @@
     cursor: pointer;
     padding: 10px 0;
     border-radius: 5px;
-    background-color: #dcf5fd;
+    /*background-color: #dcf5fd;*/
 }
 
 .yearTextHidden:hover {
     color: white;
-    background-color: #61dafb;
+    background-color: #61dafb !important;
 }
 
