--- a/src/pages/main/pages/Main.module.css
+++ b/src/pages/main/pages/Main.module.css
@@ -25,6 +25,12 @@
     }
 }
 
+@media only screen and (max-width: 450px) {
+    .yearWrapper {
+        margin-left: 20px;
+    }
+}
+
 .yearWrapperHide {
     opacity: 0;
     visibility: hidden;
