--- a/src/pages/main/components/QuarterCube.module.css
+++ b/src/pages/main/components/QuarterCube.module.css
@@ -7,6 +7,13 @@
     cursor: pointer;
 }
 
+@media screen and (max-width: 500px){
+    .cube {
+        height: 18px;
+        width: 8px;
+    }
+}
+
 .cube:hover {
     transform: scale(1.3);
     background-color: #397e94 !important;
