--- a/src/pages/main/components/WeekSection.module.css
+++ b/src/pages/main/components/WeekSection.module.css
@@ -31,6 +31,13 @@
     box-shadow: 0px 2px 6px rgba(0, 0, 0, .3);
 }
 
+@media screen and (max-width: 500px){
+    .weekCube {
+        height: 18px;
+        width: 18px;
+    }
+}
+
 
 .weekCubeWrapper:hover .weekCube{
     transform: scale(1.3);
