--- a/src/pages/user/pages/Login.module.css
+++ b/src/pages/user/pages/Login.module.css
@@ -47,6 +47,12 @@
     padding: 3rem;
 }
 
+@media screen and (max-width: 500px){
+    .login {
+        width: auto;
+    }
+}
+
 .loginTitle {
     font-size: 2rem;
     font-weight: bold;
